# nomacs-decklink

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh  make_importlib.ps1
src/: DkDeckLinkCompat.h  DkDeckLinkDialog.cpp  DkDeckLinkDialog.h  DkDeckLinkDispatch.cpp  DkDeckLinkGuids.cpp  DkDeckLinkOutput.cpp  DkDeckLinkOutput.h  DkDeckLinkPlatform.h  DkDeckLinkPlugin.cpp  DkDeckLinkPlugin.h  DkDeckLinkPlugin.json  DkDeckLinkViewPort.cpp  DkDeckLinkViewPort.h  nomacsPlugin.qrc
